[package]
name = "akso"
version = "0.1.0"
authors = ["Larry Hsiao <larryhsiao@larryhsiao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
serde = "1.0.117"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
futures = "0.3.8"